--- a/packages/scripts/bin/lib/workspace
+++ b/packages/scripts/bin/lib/workspace
@@ -7,6 +7,7 @@ function set_workspace_env() {
   export WORKSPACE_CONFIG_DIR="${workspace_dir}/config"
   export WORKSPACE_DIST_DIR="${workspace_dir}/dist"
   export WORKSPACE_SB_BUILD_DIR="${workspace_dir}/storybook_static"
+  export WORKSPACE_API_DOC_DIR="${workspace_dir}/api-docs"
 }
 
 set_workspace_env "${WORKSPACE_DIR}"
