--- a/packages/config/typescript/tsconfig.node.main.json
+++ b/packages/config/typescript/tsconfig.node.main.json
@@ -1,7 +1,10 @@
 {
   "extends": ["./tsconfig.node.json"],
   "compilerOptions": {
-    "noEmit": false
+    "noEmit": false,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
   "include": ["${configDir}/../index.ts", "${configDir}/../src/**/*.ts"],
   "exclude": [
