--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -45,7 +45,7 @@ catalog:
   storybook: ^9.0.15
   ts-graphviz: ^2.1.6
   tsx: 4.20.3
-  typedoc: ^0.28.7
+  typedoc: 0.28.7
   typescript-eslint: ^8.37.0
   typescript: ~5.8.3
   vite: ^7.0.4
