--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,9 +33,15 @@
     "autodocs",
     "bfbfbf",
     "bgcolor",
+    "Bicovariant",
+    "bimap",
+    "cartesian",
+    "cata",
+    "Cata",
     "cellborder",
     "cellspacing",
     "clusterrank",
+    "Coalgebra",
     "codegen",
     "combinators",
     "Combinators",
@@ -46,6 +52,7 @@
     "doubleoctagon",
     "ecmascript",
     "Eeuo",
+    "effectful",
     "Eilam",
     "endo",
     "Endo",
@@ -63,6 +70,8 @@
     "grey",
     "haag",
     "Haag",
+    "Hanoch",
+    "hylo",
     "invhouse",
     "invtrapezium",
     "invtriangle",
@@ -79,15 +88,18 @@
     "Mdiamond",
     "modprop",
     "modstyle",
+    "monoid",
     "Monoid",
     "msgpackr",
     "Msquare",
     "multibyte",
     "newrank",
+    "Nitsan",
     "nodenext",
     "noverhang",
     "nullary",
     "omitprops",
+    "oneof",
     "packmode",
     "penwidth",
     "pointcuts",
@@ -95,6 +107,7 @@
     "prismjs",
     "proteasesite",
     "proteinstab",
+    "Prufer",
     "rankdir",
     "ranksep",
     "rarrow",
@@ -105,6 +118,7 @@
     "rnastab",
     "rpromoter",
     "SCRIPTDIR",
+    "Semigroup",
     "septagon",
     "serviceworker",
     "shellcheck",
@@ -118,6 +132,7 @@
     "tripleoctagon",
     "tupled",
     "typedoc",
+    "Uncapitalize",
     "uncurry",
     "unfoldprop",
     "unionvariant",
