--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,6 +25,7 @@ catalog:
   '@vitest/coverage-v8': ^3.2.4
   dependency-cruiser: ^16.10.4
   effect: ^3.16.16
+  effect-ts-folds: ^1.0.22
   effect-ts-laws: ^1.3.8
   eslint-config-prettier: ^10.1.5
   eslint-plugin-prettier: ^5.5.1
@@ -45,6 +46,7 @@ catalog:
   storybook: ^9.0.15
   ts-graphviz: ^2.1.6
   tsx: 4.20.3
+  tty-strings: ^1.5.2
   typedoc: 0.28.7
   typescript-eslint: ^8.37.0
   typescript: ~5.8.3
