--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,6 +131,7 @@
     "tailwindcss",
     "threepoverhang",
     "tripleoctagon",
+    "Tsvg",
     "tupled",
     "typedoc",
     "Uncapitalize",
