--- a/packages/effect-schema-viz/package.json
+++ b/packages/effect-schema-viz/package.json
@@ -14,12 +14,14 @@
     "test:watch": "test-watch",
     "coverage": "coverage",
     "typecheck": "typecheck",
-    "build": "build",
-    "build:docs": "build-docs",
-    "example:struct": "src/test/examples/struct.ts",
     "example:class": "src/test/examples/class.ts",
     "example:dependencies": "src/test/examples/dependencies.ts",
-    "example:kitchen-sink": "src/test/examples/kitchenSink.ts"
+    "example:struct": "src/test/examples/struct.ts",
+    "example:doc-example": "src/test/examples/doc-example.ts",
+    "example:kitchen-sink": "src/test/examples/kitchenSink.ts",
+    "build": "build",
+    "build:docs": "build-docs",
+    "build:examples": "dev/build-examples"
   },
   "devDependencies": {
     "config": "workspace:",
