--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -40,7 +40,7 @@ catalog:
   globals: ^16.3.0
   happy-dom: ^18.0.1
   jiti: ^2.4.2
-  prettier: ^3.6.2
+  prettier: 3.6.2
   react-dom: ^19.1.0
   react: ^19.1.0
   storybook: ^9.0.15
