--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,49 +6,49 @@ catalog:
   '@effect/platform': ^0.88.1
   '@effect/platform-node': ^0.91.0
   '@effect/typeclass': ^0.35.14
-  '@effect/vitest': ^0.24.1
-  '@eslint/js': ^9.31.0
-  '@fast-check/vitest': ^0.2.2
+  '@effect/vitest': 0.24.1
+  '@eslint/js': 9.31.0
+  '@fast-check/vitest': 0.2.2
   '@storybook/addon-vitest': ^9.0.15
   '@storybook/react': ^9.0.15
   '@storybook/react-vite': ^9.0.15
   '@testing-library/jest-dom': ^6.6.3
   '@testing-library/react': ^16.3.0
-  '@tsconfig/node24': ^24.0.1
-  '@tsconfig/strictest': ^2.0.5
+  '@tsconfig/node24': 24.0.1
+  '@tsconfig/strictest': 2.0.5
   '@tsconfig/vite-react': ^7.0.0
-  '@types/node': ^24.0.14
+  '@types/node': 24.0.14
   '@types/react': ^19.1.8
   '@types/react-dom': ^19.1.6
   '@vitejs/plugin-react': ^4.6.0
   '@vitejs/plugin-react-swc': ^3.10.2
-  '@vitest/coverage-v8': ^3.2.4
-  dependency-cruiser: ^16.10.4
+  '@vitest/coverage-v8': 3.2.4
+  dependency-cruiser: 16.10.4
   effect: ^3.16.16
   effect-ts-folds: ^1.0.22
-  effect-ts-laws: ^1.3.8
-  eslint-config-prettier: ^10.1.5
-  eslint-plugin-prettier: ^5.5.1
+  effect-ts-laws: 1.3.8
+  eslint-config-prettier: 10.1.5
+  eslint-plugin-prettier: 5.5.1
   eslint-plugin-react-hooks: ^5.2.0
   eslint-plugin-react-refresh: ^0.4.20
   eslint-plugin-react: ^7.37.5
-  eslint-plugin-sonarjs: ^3.0.4
-  eslint-plugin-unicorn: ^59.0.1
-  eslint: ^9.31.0
-  fast-check: ^4.2.0
+  eslint-plugin-sonarjs: 3.0.4
+  eslint-plugin-unicorn: 59.0.1
+  eslint: 9.31.0
+  fast-check: 4.2.0
   fast-graph: ^1.5.0
-  globals: ^16.3.0
+  globals: 16.3.0
   happy-dom: ^18.0.1
-  jiti: ^2.4.2
+  jiti: 2.4.2
   prettier: 3.6.2
   react-dom: ^19.1.0
   react: ^19.1.0
   storybook: ^9.0.15
-  ts-graphviz: ^2.1.6
+  ts-graphviz: ^3.0.0
   tsx: 4.20.3
   tty-strings: ^1.5.2
   typedoc: 0.28.7
-  typescript-eslint: ^8.37.0
+  typescript-eslint: 8.37.0
   typescript: ~5.8.3
   vite: ^7.0.4
-  vitest: ^3.2.4
+  vitest: 3.2.4
